# rs-tar2tar

./: Cargo.toml  README.md  doc-web.sh  rs-tar2tar  rs-tar2tar.wasm  run.sh
src/: main.rs  tar.rs
src/tar/: alex.rs  file_type.rs  filter.rs  header.rs
src/tar/alex/: tar2items.rs
